avoid abuse of rpc localization + val step

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ matplotlib
 jupyter
 einops
 torch-optimizer
-rpcm
+rpcm @ git+https://github.com/cmla/rpcm.git@localization-origin
 
 # for mesh
 PyMCubes
