--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-torch>=1.6.0
-torchvision>=0.5.0
-pytorch-lightning==0.7.5
+torch
+torchvision
+pytorch-lightning
 test-tube
-kornia==0.2.0
-opencv-python==4.2.0.34
+kornia
+opencv-python
 matplotlib
 jupyter
 einops
