--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch>=1.6.0
 torchvision>=0.5.0
-pytorch-lightning==0.7.5
+pytorch-lightning>=0.7.5
 test-tube
 kornia==0.2.0
 opencv-python==4.2.0.34
@@ -11,6 +11,7 @@ torch-optimizer
 rpcm @ git+https://github.com/cmla/rpcm.git@localization-origin
 plyflatten
 utm
+omegaconf
 
 # for mesh
 PyMCubes
