--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-affine
-fire
 gdal
-kornia==0.5.3
-matplotlib
-numpy
-omegaconf
-Pillow
-plyflatten
-pyproj==3.0.1
-pytorch_lightning==1.3.7
-PyYAML<=5.4.1
-rasterio
 rpcm
-scipy
-srtm4
-utm
-chardet
 opencv-contrib-python
 jupyter
-numba
+Pillow
+chardet
+affine==2.3.0
+fire==0.4.0
+kornia==0.5.3
+matplotlib==2.2.3
+numpy==1.19.5
+plyflatten==0.2.0
+pyproj==3.0.1
+pytorch_lightning==1.3.7
+torchmetrics==0.6.0
+PyYAML<=5.4.1,>=5.1
+rasterio==1.2.10
+scipy==1.4.1
+srtm4==1.2.1
+utm==0.7.0
+scikit_image==0.16.2
+numba==0.53.1
