--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ opencv-contrib-python
 jupyter
 Pillow
 chardet
+matplotlib
+numpy
 affine==2.3.0
 fire==0.4.0
 kornia==0.5.3
-matplotlib==2.2.3
-numpy==1.19.5
 plyflatten==0.2.0
 pyproj==3.0.1
 pytorch_lightning==1.3.7
